[package]
name = "dockworker"
description = "Docker daemon API client. (a fork of Faraday's boondock)"
version = "0.0.21"
authors = ["takayuki goto <takayuki@idein.jp>"]
license = "Apache-2.0"
homepage = "https://github.com/Idein/dockworker"
repository = "https://github.com/Idein/dockworker"
documentation = "https://docs.rs/dockworker"
readme = "README.md"
keywords = ["docker"]
edition = "2018"

[badges]
appveyor = { repository = "eldesh/dockworker", branch = "master", service = "github" }
circle-ci = { repository = "Idein/dockworker" }
maintenance = { status = "actively-developed" }

[features]
# OpenSSL is fairly hard to build on certain platforms, especially if you
# want to produce release binaries. So we disable it by default.
default = []
experimental = []

# Enable OpenSSL both directly and for Hyper.
ssl = ["openssl", "native-tls", "hyper-tls"]

[dependencies]
chrono = "0.4.19"
failure = "0.1.8"
backtrace-sys = "0.1.37"
futures = "0.3.8"
http = "0.2.2"
hyper = "0.13.9"
openssl = { version = "0.10.31", optional = true }
hyperx = "1.2.0"
hyper-tls = { version = "0.4.3", optional = true }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
url = "2.2.0"
byteorder = "1.3.4"
tar = "0.4.30"
tokio = { version = "0.3.6", features = ["full"] }
log = "0.4.11"
mime = "0.3.16"
native-tls = { version = "0.2.6", optional = true }
nix = "0.15.0"
base64 = "0.13.0"
dirs-next = "2.0.0"

[dev-dependencies]
failure = "0.1.8"
env_logger = "0.8.2"
rand = "0.8.0"

[target.'cfg(unix)'.dependencies]
hyperlocal = "0.7.0"
unix_socket = "0.5.0"

[target.'cfg(windows)'.dependencies]
named_pipe = "0.4.1"
