[package]
name = "dockworker"
description = "Docker daemon API client. (a fork of Faraday's boondock)"
version = "0.1.2"
authors = ["takayuki goto <takayuki@idein.jp>"]
license = "Apache-2.0"
homepage = "https://github.com/Idein/dockworker"
repository = "https://github.com/Idein/dockworker"
documentation = "https://docs.rs/dockworker"
readme = "README.md"
keywords = ["docker"]
edition = "2018"

[badges]
appveyor = { repository = "eldesh/dockworker", branch = "master", service = "github" }
circle-ci = { repository = "Idein/dockworker" }
maintenance = { status = "actively-developed" }

[features]
# OpenSSL is fairly hard to build on certain platforms, especially if you
# want to produce release binaries. So we disable it by default.
default = []
experimental = []

# Enable OpenSSL both directly and for Hyper.
ssl = ["openssl", "native-tls", "hyper-tls"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
futures = "0.3"
http = "0.2"
hyper = { version = "0.14", features = ["client", "http1", "stream", "tcp"] }
openssl = { version = "0.10", optional = true }
hyper-tls = { version = "0.5", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
byteorder = "1"
tar = "0.4"
tokio = { version = "1", features = ["full"] }
log = "0.4"
mime = "0.3"
native-tls = { version = "0.2", optional = true }
nix = "0.24"
base64 = "0.13"
dirs = "4"
thiserror = "1"

[dev-dependencies]
env_logger = "0.9"
rand = "0.8"

[target.'cfg(unix)'.dependencies]
hyperlocal = "0.8"
unix_socket = "0.5"

[target.'cfg(windows)'.dependencies]
named_pipe = "0.4"

